Correct background selector on IE on desktop version
Layers were opened vertically instead of horizontaly.

--- a/src/components/backgroundselector/style/backgroundselector-gf3.less
+++ b/src/components/backgroundselector/style/backgroundselector-gf3.less
@@ -48,33 +48,33 @@
     &.ga-open {
       .ga-bg-layer-0 {
         .translate3d(-25px, 0, 0);
-        -ms-transform: translateY(-25px); /* IE 9*/
+        -ms-transform: translateX(-25px); /* IE 9*/
       }
 
       .ga-bg-layer-1 {
         .translate3d(-126px, 0, 0);
-        -ms-transform: translateY(-126px); /* IE 9*/
+        -ms-transform: translateX(-126px); /* IE 9*/
         @media (max-width: @screen-tablet) {
           .translate3d(-128px, 0, 0);
-          -ms-transform: translateY(-128px); /* IE 9*/
+          -ms-transform: translateX(-128px); /* IE 9*/
         }
       }
 
       .ga-bg-layer-2 {
         .translate3d(-227px, 0, 0);
-        -ms-transform: translateY(-227px); /* IE 9*/
+        -ms-transform: translateX(-227px); /* IE 9*/
         @media (max-width: @screen-tablet) {
           .translate3d(-231px, 0, 0);
-          -ms-transform: translateY(-231px); /* IE 9*/
+          -ms-transform: translateX(-231px); /* IE 9*/
         }
       }
 
       .ga-bg-layer-3 {
         .translate3d(-328px, 0, 0);
-        -ms-transform: translateY(-328px); /* IE 9*/
+        -ms-transform: translateX(-328px); /* IE 9*/
         @media (max-width: @screen-tablet) {
           .translate3d(-334px, 0, 0);
-          -ms-transform: translateY(-334px); /* IE 9*/
+          -ms-transform: translateX(-334px); /* IE 9*/
         }
       }
     }
